--- a/public/popup/style.css
+++ b/public/popup/style.css
@@ -7,8 +7,18 @@ html {
 }
 
 .records {
-  height: 450px;
+  height: 400px;
   margin: 5%;
+  overflow-y: scroll;
+}
+
+.sticky-backbutton {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: #0e0e10;
+  padding-bottom: 2%;
 }
 
 body {
@@ -36,7 +46,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 10%;
+  margin-bottom: 4%;
 }
 
 .center {
@@ -116,13 +126,14 @@ footer {
   color: lightgrey;
 }
 
-#calculatedPoints {
-  padding-left: 0.2rem;
-  padding-right: 0.2rem;
+.calc-point span {
+  padding-left: 0.1rem;
+  padding-right: 0.1rem;
 }
 
 #backButton {
   width: 5%;
+  margin: 2% 0;
 }
 
 #recordCount {
@@ -130,7 +141,7 @@ footer {
 }
 
 #recordsContainer {
-  margin-top: 5%;
+  margin-top: 0%;
   margin-bottom: 5%;
 }
 
@@ -212,6 +223,7 @@ footer {
   border-width: 0.03rem;
   border-radius: 9%;
   padding: 10%;
+  white-space: pre-line;
 
   /* left: -0%; */
   background-color: #250359;
@@ -219,4 +231,49 @@ footer {
 
 .tooltip:hover .tooltip-text {
   visibility: visible;
+}
+
+.popup {
+  height: 20%;
+  visibility: none;
+  margin-top: 25%;
+  position: absolute;
+  justify-self: center;
+  display: grid;
+}
+
+.popup h2 {
+  margin-bottom: 1%;
+}
+
+.buttons {
+  margin-top: 10%;
+}
+
+.hidden {
+  visibility: hidden;
+}
+
+.buttons button {
+  padding: 3%;
+  margin-right: 2%;
+}
+
+#resetConfirmButton:hover {
+  border-color: #fc4444;
+  background-color: #fc4444;
+  cursor: pointer;
+}
+
+#noRecordText {
+  position: absolute;
+  display: grid;
+  justify-items: center;
+  margin: 10% 0 0 0;
+}
+
+#noRecordHeader {
+  font-weight: bold;
+  font-size: 1rem;
+  padding: 0 0 3% 0;
 }
